add crew file and remove page title container from dest style. Add page title container in style css. Change background url in home stylesheet

--- a/destination-moon.html
+++ b/destination-moon.html
@@ -9,7 +9,7 @@
     href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed:wght@400;700&family=Bellefair&display=swap"
     rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./css/destinations-style.css">
   <title>Space tourism website</title>
 </head>
