--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed:wght@400;700&family=Bellefair&display=swap" rel="stylesheet">
   <title>Space tourism website</title>
   <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="./css/.css">
+  <link rel="stylesheet" href="./css/home-style.css">
 </head>
 
 <body>
