add function in script for working page navbar

--- a/index.html
+++ b/index.html
@@ -10,23 +10,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed:wght@400;700&family=Bellefair&display=swap" rel="stylesheet">
   <title>Space tourism website</title>
   <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="./css/home-style.css">
+  <!-- set dynamiclly by js according to page -->
+  <link id="secondry-stylesheet" rel="stylesheet" href="">
 </head>
 
 <body>
-
-  <!-- 00 Home
-  01 Destination
-  02 Crew
-  03 Technology
-
-  So, you want to travel to
-  Space
-  Let’s face it; if you want to go to space, you might as well genuinely go to 
-  outer space and not hover kind of on the edge of it. Well sit back, and relax 
-  because we’ll give you a truly out of this world experience!
-
-  Explore -->
+  <!-- ############################## NAVIGATION ################################### -->
   <header>
     <nav>
       <div class="logo-container nav-items">
@@ -41,7 +30,7 @@
           <div class="close-menu-icon-container">
             <img id="close-menu-icon" src="./assets/shared/icon-close.svg" alt="close icon">
           </div>
-          <p class="nav-links" id="home"><span>00</span> HOME</p>
+          <p class="nav-links active-link" id="home"><span>00</span> HOME</p>
           <p class="nav-links" id="destinations"><span>01</span> DESTINATIONS</p>
           <p class="nav-links" id="crew"><span>02</span> CREW</p>
           <p class="nav-links" id="technology"><span>03</span> TECHNOLOGY</p>
@@ -49,26 +38,9 @@
       </div>
     </nav>
   </header>
-  <main>
-    <div class="page-title">
-    </div>
-    <div class="container">
-      <div class="content-container">
-        <h2>
-          So, you want to travel to
-        </h2>
-        <h1>SPACE</h1>
-        <P> Let’s face it; if you want to go to space, you might as well genuinely go to 
-          outer space and not hover kind of on the edge of it. Well sit back, and relax 
-          because we’ll give you a truly out of this world experience!
-        </P>
-      </div>
-      <div class="image-container">
-        <div id="oval">
-          <h2>EXPLORE</h2>
-        </div>
-      </div>
-    </div>
+  <!-- ############################### MAIN ########################################## -->
+  <main id="root">
+   <!-- insert html dynamicly by js according to clicked link -->
   </main>
 <script src="./script.js"></script>
 </body>
