change in script and style and page content folder rename to page template

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link id="secondry-stylesheet" rel="stylesheet" href="">
 </head>
 
-<body>
+<body id="body">
   <!-- ############################## NAVIGATION ################################### -->
   <header>
     <nav>
